version 0.99.5-rc1_GameJam - 8-Nov-2010
. [NEW] Particles: Added a new type kCCPositionTypeRelative. Useful for "trail" particles. Added Test.
. [NEW] Textures: Added support for pvz.ccz and pvr.gz formats
. [NEW] Textures: TextureCache has a method to test if a texture is already cached (issue #793)
. [NEW] ZipUtils: Added generic functions to uncompress any .gz or .ccz file
. [FIX] Actions: OrbitCamera doesn't crash on Simulator
. [FIX] CocosDenshion: Fixed possible loss of audio on iOS 4.2
. [FIX] Menu: MenuItems can draw its children (issue #458)
. [FIX] Menu: MenuItems positions can be controlled manually (issue #1013)
. [FIX] Node: convertToAR method fixed (issue #1017)
. [FIX] Node: vertexZ works OK in RetinaDisplay mode
. [FIX] Particles: Improved doxygen documentation (issue #1026)
. [FIX] Particles: centerOfGravity renamed to sourcePosition (issue #1026)
. [FIX] RenderTexture: removed unneeded and dangerous assert in getUIImageAsDataFromBuffer
. [FIX] RenderTexture: fixed important memory leak when saving images
. [FIX] SpriteBatchNode: improved performance when drawing the batch (issue #824)
. [FIX] TextureCache: Improved loading time of cached PVR images (issue #998)
. [FIX] Texture2D: addPVRTCImage: -> addPVRImage: since it also loads non-compressed PVR images
. [FIX] Texture2D: Use 32-bit textures when creating labels on ARM_NEON hardware. Performance improvement.
. [FIX] Tiled: images can be relative to source map (issue #787)

version 0.99.5-rc0 - 25-Oct-2010
. [NEW] AnimationCache: New class. It deprecates the CCSprite#animation methods (issue #848)
. [NEW] Animation: simplified API. Name is no longer needed. Deprecated API that uses name.
. [NEW] Animation: Animation has its own file: CCAnimation.m
. [NEW] CocosDenshion: Added duration, freq and size queries for buffers
. [NEW] Director: Added "hook" for notifications or any other kind of object like CCNotifications
. [NEW] Director: Added "enableRetinaDisplay:(BOOL)enabled"