@@ -36,9 +36,9 @@
 #import "CCTMXXMLParser.h"
 #import "CCTMXTiledMap.h"
 #import "CCTMXObjectGroup.h"
-#import "Support/CCFileUtils.h"
 #import "Support/base64.h"
 #import "Support/ZipUtils.h"
+#import "Support/CCFileUtils.h"
 
 #pragma mark -
 #pragma mark TMXLayerInfo
@@ -133,7 +133,7 @@
 		
 		self.tilesets = [NSMutableArray arrayWithCapacity:4];
 		self.layers = [NSMutableArray arrayWithCapacity:4];
-		self.filename = [CCFileUtils fullPathFromRelativePath:tmxFile];
+		self.filename = tmxFile;
 		self.objectGroups = [NSMutableArray arrayWithCapacity:4];
 		self.properties = [NSMutableDictionary dictionaryWithCapacity:5];
 		self.tileProperties = [NSMutableDictionary dictionaryWithCapacity:5];
@@ -163,7 +163,7 @@
 
 - (void) parseXMLFile:(NSString *)xmlFilename
 {
-	NSURL *url = [NSURL fileURLWithPath:xmlFilename];
+	NSURL *url = [NSURL fileURLWithPath:[CCFileUtils fullPathFromRelativePath:xmlFilename] ];
 	NSXMLParser *parser = [[NSXMLParser alloc] initWithContentsOfURL:url];
 
 	// we'll do the parsing
